[package]
name = "bevy_console"
version = "0.11.1"
edition = "2021"
authors = ["RichoDemus <git@richodemus.com>"]
homepage = "https://github.com/RichoDemus/bevy-console"
repository = "https://github.com/RichoDemus/bevy-console"
description = "dev console for bevy"
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.14.0-rc.2" }
clap = { version = "4.5", features = ["derive"] }
bevy_console_derive = { path = "./bevy_console_derive" }
bevy_egui = { path = "../bevy_egui" }
shlex = "1.3"

[dev-dependencies]
bevy = { version = "0.14.0-rc.2" }

[workspace]
members = ["bevy_console_derive"]
